# Raijin-LOB

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Readme.md  notes.txt
.github/workflows/: ci.yaml
benchmarks/: lob_microbenchmarks.cpp
config/: settings.json
include/core/: config.hpp  limit_order_book.hpp  order_pool.hpp  price_level.hpp  ring_buffer.hpp  types.hpp
src/: main.cpp
src/core/: config.cpp  limit_order_book.cpp  order_pool.cpp
tests/: test_limit_order_book.cpp  test_order_pool.cpp  test_ring_buffer.cpp
